# uvicbot

./: README.md
uvicbot_description/: CMakeLists.txt  package.xml  uvicbot.rviz
uvicbot_description/launch/: uvicbot.launch
uvicbot_description/meshes/: uvicbot_body.stl  uvicbot_head.stl
uvicbot_description/urdf/: uvicbot.urdf
uvicbot_kinematics/: CMakeLists.txt  package.xml
uvicbot_kinematics/src/: uvicbot_kinematics_node.cpp
