<?xml version="1.0"?>
<package>
  <name>uvicbot_description</name>
  <version>0.0.1</version>
  <description>The uvicbot_description package</description>

  <maintainer email="juampe.lopez@gmail.com">Juampe Lopez</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/simium/uvicbot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  
  <export>
  </export>
</package>
