<?xml version="1.0"?>
<package>
  <name>uvicbot_kinematics</name>
  <version>0.0.1</version>
  <description>The uvicbot_kinematics package</description>

  <maintainer email="juampe.lopez@gmail.com">Juampe Lopez</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/simium/uvicbot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
